// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip should render plain tooltip 1`] = `
<div
  css={
    Array [
      Object {
        "map": undefined,
        "name": "1vsecbs-euiToolTip",
        "next": undefined,
        "styles": "
box-shadow:
  0 1px 5px rgba(0,0,0,0.1),
  0 3.6px 13px rgba(0,0,0,0.07),
  0 8.4px 23px rgba(0,0,0,0.06),
  0 23px 35px rgba(0,0,0,0.05);
 border:1px solid transparent;border-radius:6px;background-color:#07101F;color:#FFFFFF;z-index:9000;max-inline-size: 256px; overflow-wrap:break-word;padding:8px;font-size:1.0000rem;line-height:1.4286rem; position:absolute;[class*='euiHorizontalRule']{background-color:#2B394F;};label:euiToolTip;",
        "toString": [Function],
      },
      Object {
        "map": undefined,
        "name": "bol0qb",
        "next": undefined,
        "styles": "
    pointer-events: none;
    // Override position absolute from toolTipStyles
    position: relative;

    & {
      // stylelint-disable-line no-duplicate-selectors
      max-width: calc(32px * 10);
      overflow: hidden;
      padding: 8px;
    }

    table {
      table-layout: fixed;
      width: 100%;

      td,
      th {
        text-align: left;
        padding: 4px;
        overflow-wrap: break-word;
      }
    }
  ",
        "toString": [Function],
      },
    ]
  }
>
  <table>
    <tbody>
      <TooltipRow
        key="x-title-formatted-number-some value-0"
        label="x-title"
        value="formatted-number-some value"
      />
      <TooltipRow
        key="y-title-formatted-string-some value-1"
        label="y-title"
        value="formatted-string-some value"
      />
      <TooltipRow
        key="split-series-title-formatted-date-10-2"
        label="split-series-title"
        value="formatted-date-10"
      />
      <TooltipRow
        key="split-column-title-d-3"
        label="split-column-title"
        value="d"
      />
      <TooltipRow
        key="split-row-title-d-4"
        label="split-row-title"
        value="d"
      />
    </tbody>
  </table>
</div>
`;

exports[`Tooltip should render tooltip with partial buckets 1`] = `
<div
  css={
    Array [
      Object {
        "map": undefined,
        "name": "1vsecbs-euiToolTip",
        "next": undefined,
        "styles": "
box-shadow:
  0 1px 5px rgba(0,0,0,0.1),
  0 3.6px 13px rgba(0,0,0,0.07),
  0 8.4px 23px rgba(0,0,0,0.06),
  0 23px 35px rgba(0,0,0,0.05);
 border:1px solid transparent;border-radius:6px;background-color:#07101F;color:#FFFFFF;z-index:9000;max-inline-size: 256px; overflow-wrap:break-word;padding:8px;font-size:1.0000rem;line-height:1.4286rem; position:absolute;[class*='euiHorizontalRule']{background-color:#2B394F;};label:euiToolTip;",
        "toString": [Function],
      },
      Object {
        "map": undefined,
        "name": "bol0qb",
        "next": undefined,
        "styles": "
    pointer-events: none;
    // Override position absolute from toolTipStyles
    position: relative;

    & {
      // stylelint-disable-line no-duplicate-selectors
      max-width: calc(32px * 10);
      overflow: hidden;
      padding: 8px;
    }

    table {
      table-layout: fixed;
      width: 100%;

      td,
      th {
        text-align: left;
        padding: 4px;
        overflow-wrap: break-word;
      }
    }
  ",
        "toString": [Function],
      },
    ]
  }
>
  <div
    css={
      Object {
        "map": undefined,
        "name": "5l9hfr",
        "next": undefined,
        "styles": "
            > :last-child {
              margin-bottom: 8px;
            }
          ",
        "toString": [Function],
      }
    }
  >
    <EndzoneTooltipHeader />
  </div>
  <table>
    <tbody>
      <TooltipRow
        key="x-title-formatted-number-10-0"
        label="x-title"
        value="formatted-number-10"
      />
      <TooltipRow
        key="y-title-formatted-string-10-1"
        label="y-title"
        value="formatted-string-10"
      />
      <TooltipRow
        key="split-series-title-formatted-date-10-2"
        label="split-series-title"
        value="formatted-date-10"
      />
      <TooltipRow
        key="split-column-title-d-3"
        label="split-column-title"
        value="d"
      />
      <TooltipRow
        key="split-row-title-d-4"
        label="split-row-title"
        value="d"
      />
    </tbody>
  </table>
</div>
`;

exports[`Tooltip should render tooltip with partial buckets 2`] = `
<div
  css={
    Array [
      Object {
        "map": undefined,
        "name": "1vsecbs-euiToolTip",
        "next": undefined,
        "styles": "
box-shadow:
  0 1px 5px rgba(0,0,0,0.1),
  0 3.6px 13px rgba(0,0,0,0.07),
  0 8.4px 23px rgba(0,0,0,0.06),
  0 23px 35px rgba(0,0,0,0.05);
 border:1px solid transparent;border-radius:6px;background-color:#07101F;color:#FFFFFF;z-index:9000;max-inline-size: 256px; overflow-wrap:break-word;padding:8px;font-size:1.0000rem;line-height:1.4286rem; position:absolute;[class*='euiHorizontalRule']{background-color:#2B394F;};label:euiToolTip;",
        "toString": [Function],
      },
      Object {
        "map": undefined,
        "name": "bol0qb",
        "next": undefined,
        "styles": "
    pointer-events: none;
    // Override position absolute from toolTipStyles
    position: relative;

    & {
      // stylelint-disable-line no-duplicate-selectors
      max-width: calc(32px * 10);
      overflow: hidden;
      padding: 8px;
    }

    table {
      table-layout: fixed;
      width: 100%;

      td,
      th {
        text-align: left;
        padding: 4px;
        overflow-wrap: break-word;
      }
    }
  ",
        "toString": [Function],
      },
    ]
  }
>
  <div
    css={
      Object {
        "map": undefined,
        "name": "5l9hfr",
        "next": undefined,
        "styles": "
            > :last-child {
              margin-bottom: 8px;
            }
          ",
        "toString": [Function],
      }
    }
  >
    <EndzoneTooltipHeader />
  </div>
  <table>
    <tbody>
      <TooltipRow
        key="x-title-formatted-number-10-0"
        label="x-title"
        value="formatted-number-10"
      />
      <TooltipRow
        key="y-title-formatted-string-10-1"
        label="y-title"
        value="formatted-string-10"
      />
      <TooltipRow
        key="split-series-title-formatted-date-10-2"
        label="split-series-title"
        value="formatted-date-10"
      />
      <TooltipRow
        key="split-column-title-d-3"
        label="split-column-title"
        value="d"
      />
      <TooltipRow
        key="split-row-title-d-4"
        label="split-row-title"
        value="d"
      />
    </tbody>
  </table>
</div>
`;

exports[`Tooltip should render tooltip with xDomain 1`] = `
<div
  css={
    Array [
      Object {
        "map": undefined,
        "name": "1vsecbs-euiToolTip",
        "next": undefined,
        "styles": "
box-shadow:
  0 1px 5px rgba(0,0,0,0.1),
  0 3.6px 13px rgba(0,0,0,0.07),
  0 8.4px 23px rgba(0,0,0,0.06),
  0 23px 35px rgba(0,0,0,0.05);
 border:1px solid transparent;border-radius:6px;background-color:#07101F;color:#FFFFFF;z-index:9000;max-inline-size: 256px; overflow-wrap:break-word;padding:8px;font-size:1.0000rem;line-height:1.4286rem; position:absolute;[class*='euiHorizontalRule']{background-color:#2B394F;};label:euiToolTip;",
        "toString": [Function],
      },
      Object {
        "map": undefined,
        "name": "bol0qb",
        "next": undefined,
        "styles": "
    pointer-events: none;
    // Override position absolute from toolTipStyles
    position: relative;

    & {
      // stylelint-disable-line no-duplicate-selectors
      max-width: calc(32px * 10);
      overflow: hidden;
      padding: 8px;
    }

    table {
      table-layout: fixed;
      width: 100%;

      td,
      th {
        text-align: left;
        padding: 4px;
        overflow-wrap: break-word;
      }
    }
  ",
        "toString": [Function],
      },
    ]
  }
>
  <table>
    <tbody>
      <TooltipRow
        key="x-title-formatted-number-10-0"
        label="x-title"
        value="formatted-number-10"
      />
      <TooltipRow
        key="y-title-formatted-string-10-1"
        label="y-title"
        value="formatted-string-10"
      />
      <TooltipRow
        key="split-series-title-formatted-date-10-2"
        label="split-series-title"
        value="formatted-date-10"
      />
      <TooltipRow
        key="split-column-title-d-3"
        label="split-column-title"
        value="d"
      />
      <TooltipRow
        key="split-row-title-d-4"
        label="split-row-title"
        value="d"
      />
    </tbody>
  </table>
</div>
`;

exports[`Tooltip should render tooltip without split-column-values 1`] = `
<div
  css={
    Array [
      Object {
        "map": undefined,
        "name": "1vsecbs-euiToolTip",
        "next": undefined,
        "styles": "
box-shadow:
  0 1px 5px rgba(0,0,0,0.1),
  0 3.6px 13px rgba(0,0,0,0.07),
  0 8.4px 23px rgba(0,0,0,0.06),
  0 23px 35px rgba(0,0,0,0.05);
 border:1px solid transparent;border-radius:6px;background-color:#07101F;color:#FFFFFF;z-index:9000;max-inline-size: 256px; overflow-wrap:break-word;padding:8px;font-size:1.0000rem;line-height:1.4286rem; position:absolute;[class*='euiHorizontalRule']{background-color:#2B394F;};label:euiToolTip;",
        "toString": [Function],
      },
      Object {
        "map": undefined,
        "name": "bol0qb",
        "next": undefined,
        "styles": "
    pointer-events: none;
    // Override position absolute from toolTipStyles
    position: relative;

    & {
      // stylelint-disable-line no-duplicate-selectors
      max-width: calc(32px * 10);
      overflow: hidden;
      padding: 8px;
    }

    table {
      table-layout: fixed;
      width: 100%;

      td,
      th {
        text-align: left;
        padding: 4px;
        overflow-wrap: break-word;
      }
    }
  ",
        "toString": [Function],
      },
    ]
  }
>
  <table>
    <tbody>
      <TooltipRow
        key="x-title-formatted-number-10-0"
        label="x-title"
        value="formatted-number-10"
      />
      <TooltipRow
        key="y-title-formatted-string-10-1"
        label="y-title"
        value="formatted-string-10"
      />
      <TooltipRow
        key="split-series-title-formatted-date-10-2"
        label="split-series-title"
        value="formatted-date-10"
      />
      <TooltipRow
        key="split-row-title-d-3"
        label="split-row-title"
        value="d"
      />
    </tbody>
  </table>
</div>
`;

exports[`Tooltip should render tooltip without split-row-values 1`] = `
<div
  css={
    Array [
      Object {
        "map": undefined,
        "name": "1vsecbs-euiToolTip",
        "next": undefined,
        "styles": "
box-shadow:
  0 1px 5px rgba(0,0,0,0.1),
  0 3.6px 13px rgba(0,0,0,0.07),
  0 8.4px 23px rgba(0,0,0,0.06),
  0 23px 35px rgba(0,0,0,0.05);
 border:1px solid transparent;border-radius:6px;background-color:#07101F;color:#FFFFFF;z-index:9000;max-inline-size: 256px; overflow-wrap:break-word;padding:8px;font-size:1.0000rem;line-height:1.4286rem; position:absolute;[class*='euiHorizontalRule']{background-color:#2B394F;};label:euiToolTip;",
        "toString": [Function],
      },
      Object {
        "map": undefined,
        "name": "bol0qb",
        "next": undefined,
        "styles": "
    pointer-events: none;
    // Override position absolute from toolTipStyles
    position: relative;

    & {
      // stylelint-disable-line no-duplicate-selectors
      max-width: calc(32px * 10);
      overflow: hidden;
      padding: 8px;
    }

    table {
      table-layout: fixed;
      width: 100%;

      td,
      th {
        text-align: left;
        padding: 4px;
        overflow-wrap: break-word;
      }
    }
  ",
        "toString": [Function],
      },
    ]
  }
>
  <table>
    <tbody>
      <TooltipRow
        key="x-title-formatted-number-10-0"
        label="x-title"
        value="formatted-number-10"
      />
      <TooltipRow
        key="y-title-formatted-string-10-1"
        label="y-title"
        value="formatted-string-10"
      />
      <TooltipRow
        key="split-series-title-formatted-date-10-2"
        label="split-series-title"
        value="formatted-date-10"
      />
      <TooltipRow
        key="split-column-title-d-3"
        label="split-column-title"
        value="d"
      />
    </tbody>
  </table>
</div>
`;

exports[`Tooltip should render tooltip without splitAccessors-values 1`] = `
<div
  css={
    Array [
      Object {
        "map": undefined,
        "name": "1vsecbs-euiToolTip",
        "next": undefined,
        "styles": "
box-shadow:
  0 1px 5px rgba(0,0,0,0.1),
  0 3.6px 13px rgba(0,0,0,0.07),
  0 8.4px 23px rgba(0,0,0,0.06),
  0 23px 35px rgba(0,0,0,0.05);
 border:1px solid transparent;border-radius:6px;background-color:#07101F;color:#FFFFFF;z-index:9000;max-inline-size: 256px; overflow-wrap:break-word;padding:8px;font-size:1.0000rem;line-height:1.4286rem; position:absolute;[class*='euiHorizontalRule']{background-color:#2B394F;};label:euiToolTip;",
        "toString": [Function],
      },
      Object {
        "map": undefined,
        "name": "bol0qb",
        "next": undefined,
        "styles": "
    pointer-events: none;
    // Override position absolute from toolTipStyles
    position: relative;

    & {
      // stylelint-disable-line no-duplicate-selectors
      max-width: calc(32px * 10);
      overflow: hidden;
      padding: 8px;
    }

    table {
      table-layout: fixed;
      width: 100%;

      td,
      th {
        text-align: left;
        padding: 4px;
        overflow-wrap: break-word;
      }
    }
  ",
        "toString": [Function],
      },
    ]
  }
>
  <table>
    <tbody>
      <TooltipRow
        key="x-title-formatted-number-10-0"
        label="x-title"
        value="formatted-number-10"
      />
      <TooltipRow
        key="y-title-formatted-string-10-1"
        label="y-title"
        value="formatted-string-10"
      />
      <TooltipRow
        key="split-column-title-d-2"
        label="split-column-title"
        value="d"
      />
      <TooltipRow
        key="split-row-title-d-3"
        label="split-row-title"
        value="d"
      />
    </tbody>
  </table>
</div>
`;

exports[`Tooltip should render tooltip without x-value 1`] = `
<div
  css={
    Array [
      Object {
        "map": undefined,
        "name": "1vsecbs-euiToolTip",
        "next": undefined,
        "styles": "
box-shadow:
  0 1px 5px rgba(0,0,0,0.1),
  0 3.6px 13px rgba(0,0,0,0.07),
  0 8.4px 23px rgba(0,0,0,0.06),
  0 23px 35px rgba(0,0,0,0.05);
 border:1px solid transparent;border-radius:6px;background-color:#07101F;color:#FFFFFF;z-index:9000;max-inline-size: 256px; overflow-wrap:break-word;padding:8px;font-size:1.0000rem;line-height:1.4286rem; position:absolute;[class*='euiHorizontalRule']{background-color:#2B394F;};label:euiToolTip;",
        "toString": [Function],
      },
      Object {
        "map": undefined,
        "name": "bol0qb",
        "next": undefined,
        "styles": "
    pointer-events: none;
    // Override position absolute from toolTipStyles
    position: relative;

    & {
      // stylelint-disable-line no-duplicate-selectors
      max-width: calc(32px * 10);
      overflow: hidden;
      padding: 8px;
    }

    table {
      table-layout: fixed;
      width: 100%;

      td,
      th {
        text-align: left;
        padding: 4px;
        overflow-wrap: break-word;
      }
    }
  ",
        "toString": [Function],
      },
    ]
  }
>
  <table>
    <tbody>
      <TooltipRow
        key="y-title-formatted-string-10-0"
        label="y-title"
        value="formatted-string-10"
      />
      <TooltipRow
        key="split-series-title-formatted-date-10-1"
        label="split-series-title"
        value="formatted-date-10"
      />
      <TooltipRow
        key="split-column-title-d-2"
        label="split-column-title"
        value="d"
      />
      <TooltipRow
        key="split-row-title-d-3"
        label="split-row-title"
        value="d"
      />
    </tbody>
  </table>
</div>
`;

exports[`Tooltip should render tooltip without x-value 2`] = `
<div
  css={
    Array [
      Object {
        "map": undefined,
        "name": "1vsecbs-euiToolTip",
        "next": undefined,
        "styles": "
box-shadow:
  0 1px 5px rgba(0,0,0,0.1),
  0 3.6px 13px rgba(0,0,0,0.07),
  0 8.4px 23px rgba(0,0,0,0.06),
  0 23px 35px rgba(0,0,0,0.05);
 border:1px solid transparent;border-radius:6px;background-color:#07101F;color:#FFFFFF;z-index:9000;max-inline-size: 256px; overflow-wrap:break-word;padding:8px;font-size:1.0000rem;line-height:1.4286rem; position:absolute;[class*='euiHorizontalRule']{background-color:#2B394F;};label:euiToolTip;",
        "toString": [Function],
      },
      Object {
        "map": undefined,
        "name": "bol0qb",
        "next": undefined,
        "styles": "
    pointer-events: none;
    // Override position absolute from toolTipStyles
    position: relative;

    & {
      // stylelint-disable-line no-duplicate-selectors
      max-width: calc(32px * 10);
      overflow: hidden;
      padding: 8px;
    }

    table {
      table-layout: fixed;
      width: 100%;

      td,
      th {
        text-align: left;
        padding: 4px;
        overflow-wrap: break-word;
      }
    }
  ",
        "toString": [Function],
      },
    ]
  }
>
  <table>
    <tbody>
      <TooltipRow
        key="y-title-formatted-string-10-0"
        label="y-title"
        value="formatted-string-10"
      />
      <TooltipRow
        key="split-series-title-formatted-date-10-1"
        label="split-series-title"
        value="formatted-date-10"
      />
      <TooltipRow
        key="split-column-title-d-2"
        label="split-column-title"
        value="d"
      />
      <TooltipRow
        key="split-row-title-d-3"
        label="split-row-title"
        value="d"
      />
    </tbody>
  </table>
</div>
`;

exports[`Tooltip should render tooltip without y-value 1`] = `
<div
  css={
    Array [
      Object {
        "map": undefined,
        "name": "1vsecbs-euiToolTip",
        "next": undefined,
        "styles": "
box-shadow:
  0 1px 5px rgba(0,0,0,0.1),
  0 3.6px 13px rgba(0,0,0,0.07),
  0 8.4px 23px rgba(0,0,0,0.06),
  0 23px 35px rgba(0,0,0,0.05);
 border:1px solid transparent;border-radius:6px;background-color:#07101F;color:#FFFFFF;z-index:9000;max-inline-size: 256px; overflow-wrap:break-word;padding:8px;font-size:1.0000rem;line-height:1.4286rem; position:absolute;[class*='euiHorizontalRule']{background-color:#2B394F;};label:euiToolTip;",
        "toString": [Function],
      },
      Object {
        "map": undefined,
        "name": "bol0qb",
        "next": undefined,
        "styles": "
    pointer-events: none;
    // Override position absolute from toolTipStyles
    position: relative;

    & {
      // stylelint-disable-line no-duplicate-selectors
      max-width: calc(32px * 10);
      overflow: hidden;
      padding: 8px;
    }

    table {
      table-layout: fixed;
      width: 100%;

      td,
      th {
        text-align: left;
        padding: 4px;
        overflow-wrap: break-word;
      }
    }
  ",
        "toString": [Function],
      },
    ]
  }
>
  <table>
    <tbody>
      <TooltipRow
        key="x-title-formatted-number-10-0"
        label="x-title"
        value="formatted-number-10"
      />
      <TooltipRow
        key="split-series-title-formatted-date-10-1"
        label="split-series-title"
        value="formatted-date-10"
      />
      <TooltipRow
        key="split-column-title-d-2"
        label="split-column-title"
        value="d"
      />
      <TooltipRow
        key="split-row-title-d-3"
        label="split-row-title"
        value="d"
      />
    </tbody>
  </table>
</div>
`;
